--- a/ETL/Correction/Boston.ipynb
+++ b/ETL/Correction/Boston.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://data.boston.gov/api/3/action/datastore_search?resource_id=31358fd1-849a-48e0-8285-e813f6efbdf1'  \n",
-    "fileobj = urllib.request.urlopen(url)\n",
-    "response_dict = json.loads(fileobj.read())"
+    "url = 'https://data.boston.gov/api/3/action/datastore_search?resource_id=31358fd1-849a-48e0-8285-e813f6efbdf1'  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Extraction des données\n",
+    "\"\"\"\n",
+    "def extract_boston_salary(url):\n",
+    "    \n",
+    "    fileobj = urllib.request.urlopen(url)\n",
+    "    response_dict = json.loads(fileobj.read())\n",
+    "    \n",
+    "    return response_dict['result']['records']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,46 +62,373 @@
        "dtype: object"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfBoston = pd.DataFrame( response_dict['result']['records'] )\n",
+    "dfBoston = pd.DataFrame( extract_boston_salary(url) )\n",
     "\n",
     "dfBoston.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Avec la fonction astype de Pandas essayez de caster le type de la colonne TOTAL EARNINGS\n",
+    "# En float\n",
+    "\n",
+    "dfBoston['TOTAL EARNINGS'] = dfBoston['TOTAL EARNINGS'].str.replace(\",\", \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfBoston['TOTAL EARNINGS'] = dfBoston['TOTAL EARNINGS'].astype('float')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print( dfBoston.head(2) )\n",
+    "#print(\"-----------------\")\n",
+    "#print( dfBoston.tail(2) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxSalary = dfBoston['TOTAL EARNINGS'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dtype('O')"
+       "684410.9"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Avec la fonction astype de Pandas essayez de caster le type de la colonne TOTAL EARNINGS\n",
-    "# En float\n",
-    "\n",
-    "dfBoston['TOTAL EARNINGS'].astype"
+    "maxSalary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dfBoston['ECART_SALARY'] = dfBoston['TOTAL EARNINGS'].apply(lambda x : abs( x - maxSalary) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>INJURED</th>\n",
+       "      <th>POSTAL</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>TITLE</th>\n",
+       "      <th>DETAIL</th>\n",
+       "      <th>OTHER</th>\n",
+       "      <th>DEPARTMENT_NAME</th>\n",
+       "      <th>OVERTIME</th>\n",
+       "      <th>REGULAR</th>\n",
+       "      <th>RETRO</th>\n",
+       "      <th>QUINN/EDUCATION INCENTIVE</th>\n",
+       "      <th>_id</th>\n",
+       "      <th>TOTAL EARNINGS</th>\n",
+       "      <th>ECART_SALARY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5,307.62</td>\n",
+       "      <td>02356</td>\n",
+       "      <td>Williams,David C.</td>\n",
+       "      <td>Police Officer</td>\n",
+       "      <td>24,610.00</td>\n",
+       "      <td>503,025.78</td>\n",
+       "      <td>Boston Police Department</td>\n",
+       "      <td>45,176.88</td>\n",
+       "      <td>95,184.68</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4,375.69</td>\n",
+       "      <td>1</td>\n",
+       "      <td>677680.65</td>\n",
+       "      <td>6730.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>None</td>\n",
+       "      <td>02131</td>\n",
+       "      <td>Earley,John W</td>\n",
+       "      <td>Police Lieutenant</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>204,120.61</td>\n",
+       "      <td>Boston Police Department</td>\n",
+       "      <td>668.36</td>\n",
+       "      <td>26,130.54</td>\n",
+       "      <td>13,001.47</td>\n",
+       "      <td>6,532.63</td>\n",
+       "      <td>2</td>\n",
+       "      <td>250893.61</td>\n",
+       "      <td>433517.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>None</td>\n",
+       "      <td>02135</td>\n",
+       "      <td>Bucelewicz,Helen</td>\n",
+       "      <td>Police Officer</td>\n",
+       "      <td>None</td>\n",
+       "      <td>200,000.00</td>\n",
+       "      <td>Boston Police Department</td>\n",
+       "      <td>None</td>\n",
+       "      <td>8,676.89</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3</td>\n",
+       "      <td>208676.89</td>\n",
+       "      <td>475734.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>None</td>\n",
+       "      <td>02127</td>\n",
+       "      <td>Evans,William B</td>\n",
+       "      <td>Commissioner (Bpd)</td>\n",
+       "      <td>None</td>\n",
+       "      <td>165,858.44</td>\n",
+       "      <td>Boston Police Department</td>\n",
+       "      <td>None</td>\n",
+       "      <td>149,999.93</td>\n",
+       "      <td>3,461.56</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>319319.93</td>\n",
+       "      <td>365090.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>None</td>\n",
+       "      <td>02126</td>\n",
+       "      <td>Jones,Ronnie C</td>\n",
+       "      <td>Police Officer</td>\n",
+       "      <td>None</td>\n",
+       "      <td>114,973.46</td>\n",
+       "      <td>Boston Police Department</td>\n",
+       "      <td>None</td>\n",
+       "      <td>462,149.98</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5</td>\n",
+       "      <td>577123.44</td>\n",
+       "      <td>107287.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>63.45</td>\n",
+       "      <td>02081</td>\n",
+       "      <td>Danilecki,John H</td>\n",
+       "      <td>Police Captain</td>\n",
+       "      <td>60,720.00</td>\n",
+       "      <td>23,421.44</td>\n",
+       "      <td>Boston Police Department</td>\n",
+       "      <td>53,451.69</td>\n",
+       "      <td>155,283.95</td>\n",
+       "      <td>19,272.18</td>\n",
+       "      <td>34,816.68</td>\n",
+       "      <td>96</td>\n",
+       "      <td>347029.39</td>\n",
+       "      <td>337381.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>None</td>\n",
+       "      <td>01741</td>\n",
+       "      <td>Fong,Kenneth</td>\n",
+       "      <td>Police Captain/DDC</td>\n",
+       "      <td>None</td>\n",
+       "      <td>23,371.83</td>\n",
+       "      <td>Boston Police Department</td>\n",
+       "      <td>55,569.75</td>\n",
+       "      <td>154,669.92</td>\n",
+       "      <td>27,842.05</td>\n",
+       "      <td>34,708.49</td>\n",
+       "      <td>97</td>\n",
+       "      <td>296162.04</td>\n",
+       "      <td>388248.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>None</td>\n",
+       "      <td>02032</td>\n",
+       "      <td>Gaughan,James M</td>\n",
+       "      <td>Police Captain</td>\n",
+       "      <td>None</td>\n",
+       "      <td>22,886.96</td>\n",
+       "      <td>Boston Police Department</td>\n",
+       "      <td>39,335.07</td>\n",
+       "      <td>151,953.22</td>\n",
+       "      <td>17,145.33</td>\n",
+       "      <td>34,069.28</td>\n",
+       "      <td>98</td>\n",
+       "      <td>265389.86</td>\n",
+       "      <td>419021.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>None</td>\n",
+       "      <td>02170</td>\n",
+       "      <td>McGoldrick,Kevin J</td>\n",
+       "      <td>Dep Supn (Bpd)</td>\n",
+       "      <td>2,200.00</td>\n",
+       "      <td>22,732.64</td>\n",
+       "      <td>Boston Police Department</td>\n",
+       "      <td>27,310.87</td>\n",
+       "      <td>143,987.62</td>\n",
+       "      <td>15,449.58</td>\n",
+       "      <td>32,467.17</td>\n",
+       "      <td>99</td>\n",
+       "      <td>244147.88</td>\n",
+       "      <td>440263.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>None</td>\n",
+       "      <td>02118</td>\n",
+       "      <td>Walcott,Jeffrey I</td>\n",
+       "      <td>Dep Supn (Bpd)</td>\n",
+       "      <td>None</td>\n",
+       "      <td>22,638.09</td>\n",
+       "      <td>Boston Police Department</td>\n",
+       "      <td>None</td>\n",
+       "      <td>168,729.66</td>\n",
+       "      <td>18,449.91</td>\n",
+       "      <td>29,314.88</td>\n",
+       "      <td>100</td>\n",
+       "      <td>239132.54</td>\n",
+       "      <td>445278.36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     INJURED POSTAL                NAME               TITLE     DETAIL  \\\n",
+       "0   5,307.62  02356   Williams,David C.      Police Officer  24,610.00   \n",
+       "1       None  02131       Earley,John W   Police Lieutenant     440.00   \n",
+       "2       None  02135    Bucelewicz,Helen      Police Officer       None   \n",
+       "3       None  02127     Evans,William B  Commissioner (Bpd)       None   \n",
+       "4       None  02126      Jones,Ronnie C      Police Officer       None   \n",
+       "..       ...    ...                 ...                 ...        ...   \n",
+       "95     63.45  02081    Danilecki,John H      Police Captain  60,720.00   \n",
+       "96      None  01741        Fong,Kenneth  Police Captain/DDC       None   \n",
+       "97      None  02032     Gaughan,James M      Police Captain       None   \n",
+       "98      None  02170  McGoldrick,Kevin J      Dep Supn (Bpd)   2,200.00   \n",
+       "99      None  02118   Walcott,Jeffrey I      Dep Supn (Bpd)       None   \n",
+       "\n",
+       "         OTHER           DEPARTMENT_NAME   OVERTIME     REGULAR      RETRO  \\\n",
+       "0   503,025.78  Boston Police Department  45,176.88   95,184.68       None   \n",
+       "1   204,120.61  Boston Police Department     668.36   26,130.54  13,001.47   \n",
+       "2   200,000.00  Boston Police Department       None    8,676.89       None   \n",
+       "3   165,858.44  Boston Police Department       None  149,999.93   3,461.56   \n",
+       "4   114,973.46  Boston Police Department       None  462,149.98       None   \n",
+       "..         ...                       ...        ...         ...        ...   \n",
+       "95   23,421.44  Boston Police Department  53,451.69  155,283.95  19,272.18   \n",
+       "96   23,371.83  Boston Police Department  55,569.75  154,669.92  27,842.05   \n",
+       "97   22,886.96  Boston Police Department  39,335.07  151,953.22  17,145.33   \n",
+       "98   22,732.64  Boston Police Department  27,310.87  143,987.62  15,449.58   \n",
+       "99   22,638.09  Boston Police Department       None  168,729.66  18,449.91   \n",
+       "\n",
+       "   QUINN/EDUCATION INCENTIVE  _id  TOTAL EARNINGS  ECART_SALARY  \n",
+       "0                   4,375.69    1       677680.65       6730.25  \n",
+       "1                   6,532.63    2       250893.61     433517.29  \n",
+       "2                       None    3       208676.89     475734.01  \n",
+       "3                       None    4       319319.93     365090.97  \n",
+       "4                       None    5       577123.44     107287.46  \n",
+       "..                       ...  ...             ...           ...  \n",
+       "95                 34,816.68   96       347029.39     337381.51  \n",
+       "96                 34,708.49   97       296162.04     388248.86  \n",
+       "97                 34,069.28   98       265389.86     419021.04  \n",
+       "98                 32,467.17   99       244147.88     440263.02  \n",
+       "99                 29,314.88  100       239132.54     445278.36  \n",
+       "\n",
+       "[100 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfBoston"
+   ]
   }
  ],
  "metadata": {
